feat: Implement reference data API and admin tariff management
- Added ReferenceController to handle country and product category data retrieval.
- Created ReferenceOptionDto for structured reference data.
- Introduced constants for country and product category codes in the frontend.
- Developed AdminTariffsPage for tariff management with form handling and CRUD operations.
- Implemented caching for reference data fetching in the reference service.
- Added AdminRoute for protecting admin routes based on authentication and role.
- Enhanced RatesPage to utilize new reference data structure for country and category selections.
- Updated auth service to include admin role check.
- Styled admin forms and tables for better UX.