@@ -1,24 +1,26 @@
 package com.smu.tariff.tariff;
 
+import java.io.ByteArrayOutputStream;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalDate;
 import java.util.List;
-import java.io.ByteArrayOutputStream;
 import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import com.lowagie.text.Document;
+import com.lowagie.text.FontFactory;
+import com.lowagie.text.Paragraph;
+import com.lowagie.text.pdf.PdfPTable;
+import com.lowagie.text.pdf.PdfWriter;
 import com.smu.tariff.country.Country;
 import com.smu.tariff.country.CountryRepository;
 import com.smu.tariff.exception.InvalidTariffRequestException;
 import com.smu.tariff.exception.TariffNotFoundException;
-import com.smu.tariff.logging.QueryLog;
-import com.smu.tariff.logging.QueryLogRepository;
 import com.smu.tariff.logging.QueryLogService;
 import com.smu.tariff.product.ProductCategory;
 import com.smu.tariff.product.ProductCategoryRepository;
@@ -26,12 +28,6 @@ import com.smu.tariff.tariff.dto.TariffCalcRequest;
 import com.smu.tariff.tariff.dto.TariffCalcResponse;
 import com.smu.tariff.tariff.dto.TariffRateDto;
 import com.smu.tariff.tariff.dto.TariffRateDtoPost;
-import com.smu.tariff.user.User;
-import com.smu.tariff.user.UserRepository;
-import org.springframework.security.core.userdetails.UserDetails;
-
-import com.lowagie.text.*;
-import com.lowagie.text.pdf.*;
 
 @Service
 @Transactional
@@ -42,12 +38,12 @@ public class TariffService {
     private final TariffRateRepository tariffRateRepository;
     private final CountryRepository countryRepository;
     private final ProductCategoryRepository productCategoryRepository;
-    private final com.smu.tariff.logging.QueryLogService queryLogService;
+    private final QueryLogService queryLogService;
 
     public TariffService(TariffRateRepository tariffRateRepository,
-            CountryRepository countryRepository,
-            ProductCategoryRepository productCategoryRepository,
-            QueryLogRepository queryLogRepository) {
+                         CountryRepository countryRepository,
+                         ProductCategoryRepository productCategoryRepository,
+                         QueryLogService queryLogService) {
         this.tariffRateRepository = tariffRateRepository;
         this.countryRepository = countryRepository;
         this.productCategoryRepository = productCategoryRepository;
@@ -55,7 +51,6 @@ public class TariffService {
     }
 
     public TariffCalcResponse calculate(TariffCalcRequest req) {
-        // Validate input
         if (req.originCountryCode == null || req.originCountryCode.trim().isEmpty()) {
             throw new InvalidTariffRequestException("Origin country code is required");
         }
@@ -71,47 +66,35 @@ public class TariffService {
 
         LocalDate date = (req.date == null || req.date.isBlank()) ? LocalDate.now() : LocalDate.parse(req.date);
 
-        
-        // Fetch entities, throw error if not found
         Country origin = countryRepository.findByCode(req.originCountryCode.toUpperCase())
-                .orElseThrow(() -> new InvalidTariffRequestException(
-                        "Unknown origin country code: " + req.originCountryCode));
+                .orElseThrow(() -> new InvalidTariffRequestException("Unknown origin country code: " + req.originCountryCode));
         Country dest = countryRepository.findByCode(req.destinationCountryCode.toUpperCase())
-                .orElseThrow(() -> new InvalidTariffRequestException(
-                        "Unknown destination country code: " + req.destinationCountryCode));
+                .orElseThrow(() -> new InvalidTariffRequestException("Unknown destination country code: " + req.destinationCountryCode));
         ProductCategory cat = productCategoryRepository.findByCode(req.productCategoryCode.toUpperCase())
-                .orElseThrow(() -> new InvalidTariffRequestException(
-                        "Unknown product category code: " + req.productCategoryCode));
+                .orElseThrow(() -> new InvalidTariffRequestException("Unknown product category code: " + req.productCategoryCode));
 
         List<TariffRate> rates = tariffRateRepository.findApplicableRates(origin, dest, cat, date);
         if (rates.isEmpty()) {
             throw new TariffNotFoundException(
-                    "No applicable tariff rate found for route %s -> %s, category %s on %s".formatted(
-                            req.originCountryCode, req.destinationCountryCode, req.productCategoryCode, date));
+                String.format("No applicable tariff rate found for route %s -> %s, category %s on %s",
+                    req.originCountryCode, req.destinationCountryCode, req.productCategoryCode, date));
         }
-        TariffRate rate = rates.get(0); // latest effective rate
+        TariffRate rate = rates.get(0);
 
-        // If the selected rate has zero baseRate and zero additionalFee, try to find a fallback
-        if ((rate.getBaseRate() == null || rate.getBaseRate().compareTo(java.math.BigDecimal.ZERO) == 0)
-                && (rate.getAdditionalFee() == null || rate.getAdditionalFee().compareTo(java.math.BigDecimal.ZERO) == 0)) {
-            // Attempt to find a recent non-zero rate for the same category
-            java.util.Optional<TariffRate> fallback = tariffRateRepository.findFirstByProductCategoryAndBaseRateGreaterThanOrderByEffectiveFromDesc(cat, java.math.BigDecimal.ZERO);
-            if (fallback.isPresent()) {
-                rate = fallback.get();
-            }
+        if ((rate.getBaseRate() == null || rate.getBaseRate().compareTo(BigDecimal.ZERO) == 0)
+                && (rate.getAdditionalFee() == null || rate.getAdditionalFee().compareTo(BigDecimal.ZERO) == 0)) {
+            tariffRateRepository.findFirstByProductCategoryAndBaseRateGreaterThanOrderByEffectiveFromDesc(cat, BigDecimal.ZERO)
+                    .ifPresent(found -> {
+                        logger.info("Using fallback rate {} for category {}", found.getId(), cat.getCode());
+                        rate.setBaseRate(found.getBaseRate());
+                        rate.setAdditionalFee(found.getAdditionalFee());
+                    });
         }
 
-        BigDecimal declared = BigDecimal.valueOf(req.declaredValue).setScale(2, RoundingMode.HALF_UP);
-        BigDecimal baseRate = (rate.getBaseRate() == null) ? BigDecimal.ZERO : rate.getBaseRate();
-        BigDecimal additionalFee = (rate.getAdditionalFee() == null) ? BigDecimal.ZERO : rate.getAdditionalFee();
+        BigDecimal declared = BigDecimal.valueOf(req.declaredValue);
+        BigDecimal tariffAmount = declared.multiply(rate.getBaseRate()).setScale(2, RoundingMode.HALF_UP);
+        BigDecimal total = declared.add(tariffAmount).add(rate.getAdditionalFee()).setScale(2, RoundingMode.HALF_UP);
 
-        // Compute tariff as: declared + (declared * baseRate) + additionalFee
-        BigDecimal tariffAmount = declared.multiply(baseRate).setScale(2, RoundingMode.HALF_UP);
-        BigDecimal total = declared.add(tariffAmount).add(additionalFee).setScale(2, RoundingMode.HALF_UP);
-
-        logger.info("Selected rate id={} baseRate={} additionalFee={}", rate.getId(), baseRate, additionalFee);
-
-        // Prepare response
         TariffCalcResponse resp = new TariffCalcResponse();
         resp.originCountryCode = origin.getCode();
         resp.destinationCountryCode = dest.getCode();
@@ -124,11 +107,14 @@ public class TariffService {
         resp.totalCost = total;
         resp.notes = "Total = declaredValue + (declaredValue * baseRate) + additionalFee";
 
-        // Log the query (attach authenticated user if present)
         queryLogService.log(
             "CALCULATE",
             String.format("{origin:%s,dest:%s,cat:%s,val:%s,date:%s}",
-                resp.originCountryCode, resp.destinationCountryCode, resp.productCategoryCode, declared, date),
+                    resp.originCountryCode,
+                    resp.destinationCountryCode,
+                    resp.productCategoryCode,
+                    declared,
+                    date),
             resp,
             resp.originCountryCode,
             resp.destinationCountryCode
@@ -143,93 +129,72 @@ public class TariffService {
         ProductCategory cat = null;
 
         if (originCode != null && !originCode.trim().isEmpty()) {
-            origin = countryRepository.findByCode(originCode)
+            origin = countryRepository.findByCode(originCode.toUpperCase())
                     .orElseThrow(() -> new InvalidTariffRequestException("Unknown origin country code: " + originCode));
         }
-
         if (destCode != null && !destCode.trim().isEmpty()) {
-            dest = countryRepository.findByCode(destCode)
-                    .orElseThrow(
-                            () -> new InvalidTariffRequestException("Unknown destination country code: " + destCode));
+            dest = countryRepository.findByCode(destCode.toUpperCase())
+                    .orElseThrow(() -> new InvalidTariffRequestException("Unknown destination country code: " + destCode));
         }
-
         if (catCode != null && !catCode.trim().isEmpty()) {
             cat = productCategoryRepository.findByCode(catCode.toUpperCase())
                     .orElseThrow(() -> new InvalidTariffRequestException("Unknown product category code: " + catCode));
         }
 
-        List<TariffRate> list = tariffRateRepository.search(origin, dest, cat);
+        List<TariffRateDto> dtos = tariffRateRepository.search(origin, dest, cat)
+                .stream()
+                .map(this::mapToDto)
+                .collect(Collectors.toList());
 
-        List<TariffRateDto> dtos = list.stream().map(t -> {
-            TariffRateDto dto = new TariffRateDto();
-            dto.id = t.getId();
-            dto.originCountryCode = t.getOrigin().getCode();
-            dto.destinationCountryCode = t.getDestination().getCode();
-            dto.productCategoryCode = t.getProductCategory().getCode();
-            dto.baseRate = t.getBaseRate();
-            dto.additionalFee = t.getAdditionalFee();
-            dto.effectiveFrom = t.getEffectiveFrom();
-            dto.effectiveTo = t.getEffectiveTo();
-            return dto;
-        }).collect(java.util.stream.Collectors.toList());
+        var resultSummary = new java.util.HashMap<String, Object>();
+        resultSummary.put("count", dtos.size());
+        var sampleIds = dtos.stream()
+                .map(dto -> dto.id)
+                .filter(id -> id != null)
+                .limit(3)
+                .collect(Collectors.toList());
+        if (!sampleIds.isEmpty()) {
+            resultSummary.put("sampleIds", sampleIds);
+        }
 
-        logQuery("SEARCH", "{origin:%s,dest:%s,cat:%s}".formatted(originCode, destCode, catCode));
+        queryLogService.log(
+            "SEARCH",
+            String.format("{origin:%s,dest:%s,cat:%s}", originCode, destCode, catCode),
+            resultSummary,
+            originCode,
+            destCode
+        );
+
         return dtos;
     }
 
-    private void logQuery(String type, String params) {
-        org.springframework.security.core.Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-        User user = (auth != null && auth.getPrincipal() instanceof User) ? (User) auth.getPrincipal() : null;
-        queryLogRepository.save(new QueryLog(user, type, params));
-    }
-
-    // CREATE a new tariff rule
     public TariffRateDto createTariff(TariffRateDtoPost dto) {
-    Country origin = countryRepository.findByCode(dto.originCountryCode)
-    .orElseThrow(() -> new InvalidTariffRequestException("Unknown origin country code: " + dto.originCountryCode));
+        TariffRate rate = buildTariffFromPostDto(dto);
+        TariffRate saved = tariffRateRepository.save(rate);
 
-    Country dest = countryRepository.findByCode(dto.destinationCountryCode)
-    .orElseThrow(() -> new InvalidTariffRequestException("Unknown destination country code: " + dto.destinationCountryCode));
+        queryLogService.log(
+            "CREATE_TARIFF",
+            summarizeTariff(rate),
+            mapToDto(saved),
+            saved.getOrigin().getCode(),
+            saved.getDestination().getCode()
+        );
 
-    ProductCategory cat = productCategoryRepository.findByCode(dto.productCategoryCode)
-        .orElseThrow(() -> new RuntimeException("Category not found: " + dto.productCategoryCode));
-
-
-    TariffRate tariff = new TariffRate(origin, dest, cat, dto.baseRate, dto.additionalFee,
-                                       dto.effectiveFrom, dto.effectiveTo);
-    TariffRate saved = tariffRateRepository.save(tariff);
-
-    return mapToDto(saved);
-}
-
-    // Utility method to map entity -> DTO
-    private TariffRateDto mapToDto(TariffRate t) {
-        TariffRateDto dto = new TariffRateDto();
-        dto.id = t.getId();
-        dto.originCountryCode = t.getOrigin().getCode();
-        dto.destinationCountryCode = t.getDestination().getCode();
-        dto.productCategoryCode = t.getProductCategory().getCode();
-        dto.baseRate = t.getBaseRate();
-        dto.additionalFee = t.getAdditionalFee();
-        dto.effectiveFrom = t.getEffectiveFrom();
-        dto.effectiveTo = t.getEffectiveTo();
-        return dto;
+        return mapToDto(saved);
     }
 
-    // READ ALL
     public List<TariffRateDto> getAllTariffs() {
-        List<TariffRate> list = tariffRateRepository.findAll();
-        return list.stream().map(this::mapToDto).collect(Collectors.toList());
+        return tariffRateRepository.findAll().stream()
+                .map(this::mapToDto)
+                .collect(Collectors.toList());
     }
 
-    // READ ONE BY ID
     public TariffRateDto getTariffById(Long id) {
         TariffRate rate = tariffRateRepository.findById(id)
                 .orElseThrow(() -> new TariffNotFoundException("Tariff with id " + id + " not found"));
         return mapToDto(rate);
     }
 
-    // UPDATE
     public TariffRateDto updateTariff(Long id, TariffRateDto dto) {
         TariffRate rate = tariffRateRepository.findById(id)
                 .orElseThrow(() -> new TariffNotFoundException("Tariff with id " + id + " not found"));
@@ -249,28 +214,43 @@ public class TariffService {
                     .orElseThrow(() -> new InvalidTariffRequestException("Unknown product category code: " + dto.productCategoryCode));
             rate.setProductCategory(cat);
         }
-        if (dto.baseRate != null) rate.setBaseRate(dto.baseRate);
-        if (dto.additionalFee != null) rate.setAdditionalFee(dto.additionalFee);
-        if (dto.effectiveFrom != null) rate.setEffectiveFrom(dto.effectiveFrom);
-        if (dto.effectiveTo != null) rate.setEffectiveTo(dto.effectiveTo);
-
-        tariffRateRepository.save(rate);
-
-        logQuery("UPDATE", "id=" + id + ", " + dto.toString());
-
-        return mapToDto(rate);
-    }
-
-    // DELETE
-    public void deleteTariff(Long id) {
-        if (!tariffRateRepository.existsById(id)) {
-            throw new TariffNotFoundException("Tariff with id " + id + " not found");
+        if (dto.baseRate != null) {
+            rate.setBaseRate(dto.baseRate);
         }
-        tariffRateRepository.deleteById(id);
-        logQuery("DELETE", "id=" + id);
+        if (dto.additionalFee != null) {
+            rate.setAdditionalFee(dto.additionalFee);
+        }
+        if (dto.effectiveFrom != null) {
+            rate.setEffectiveFrom(dto.effectiveFrom);
+        }
+        if (dto.effectiveTo != null) {
+            rate.setEffectiveTo(dto.effectiveTo);
+        }
+
+        TariffRate saved = tariffRateRepository.save(rate);
+
+        queryLogService.log(
+            "UPDATE_TARIFF", summarizeTariff(saved),
+            mapToDto(saved),
+            saved.getOrigin().getCode(),
+            saved.getDestination().getCode()
+        );
+
+        return mapToDto(saved);
     }
 
-    // ^CRUD satisfied
+    public void deleteTariff(Long id) {
+        TariffRate rate = tariffRateRepository.findById(id)
+                .orElseThrow(() -> new TariffNotFoundException("Tariff with id " + id + " not found"));
+        tariffRateRepository.delete(rate);
+
+        queryLogService.log(
+            "DELETE_TARIFF", summarizeTariff(rate),
+            null,
+            rate.getOrigin().getCode(),
+            rate.getDestination().getCode()
+        );
+    }
 
     public byte[] generatePdfReport(TariffCalcResponse resp) {
         ByteArrayOutputStream out = new ByteArrayOutputStream();
@@ -279,12 +259,10 @@ public class TariffService {
             PdfWriter.getInstance(document, out);
             document.open();
 
-            // Title
             document.add(new Paragraph("Tariff Calculation Report", FontFactory.getFont(FontFactory.HELVETICA_BOLD, 16)));
             document.add(new Paragraph("Generated on: " + LocalDate.now()));
             document.add(new Paragraph(" "));
 
-            // Input details
             document.add(new Paragraph("Origin Country: " + resp.originCountryCode));
             document.add(new Paragraph("Destination Country: " + resp.destinationCountryCode));
             document.add(new Paragraph("Product Category: " + resp.productCategoryCode));
@@ -292,7 +270,6 @@ public class TariffService {
             document.add(new Paragraph("Declared Value: " + resp.declaredValue));
             document.add(new Paragraph(" "));
 
-            // Calculation details in table
             PdfPTable table = new PdfPTable(2);
             table.setWidthPercentage(100);
 
@@ -310,7 +287,6 @@ public class TariffService {
 
             document.add(table);
 
-            // Notes
             document.add(new Paragraph(" "));
             document.add(new Paragraph("Notes: " + resp.notes));
 
@@ -318,8 +294,59 @@ public class TariffService {
         } catch (Exception e) {
             throw new RuntimeException("Error generating PDF", e);
         }
-        tariffRateRepository.deleteById(id);
-        logQuery("DELETE", "id=" + id);
+
+        return out.toByteArray();
+    }
+
+    private TariffRate buildTariffFromPostDto(TariffRateDtoPost dto) {
+        if (dto.originCountryCode == null || dto.originCountryCode.isBlank() ||
+            dto.destinationCountryCode == null || dto.destinationCountryCode.isBlank() ||
+            dto.productCategoryCode == null || dto.productCategoryCode.isBlank()) {
+            throw new InvalidTariffRequestException("Origin, destination and product category codes are required");
+        }
+        if (dto.baseRate == null || dto.additionalFee == null || dto.effectiveFrom == null) {
+            throw new InvalidTariffRequestException("Base rate, additional fee and effective-from date are required");
+        }
+
+        Country origin = countryRepository.findByCode(dto.originCountryCode.toUpperCase())
+                .orElseThrow(() -> new InvalidTariffRequestException("Unknown origin country code: " + dto.originCountryCode));
+        Country dest = countryRepository.findByCode(dto.destinationCountryCode.toUpperCase())
+                .orElseThrow(() -> new InvalidTariffRequestException("Unknown destination country code: " + dto.destinationCountryCode));
+        ProductCategory cat = productCategoryRepository.findByCode(dto.productCategoryCode.toUpperCase())
+                .orElseThrow(() -> new InvalidTariffRequestException("Unknown product category code: " + dto.productCategoryCode));
+
+        return new TariffRate(
+                origin,
+                dest,
+                cat,
+                dto.baseRate,
+                dto.additionalFee,
+                dto.effectiveFrom,
+                dto.effectiveTo
+        );
+    }
+
+    private String summarizeTariff(TariffRate rate) {
+        String idPart = rate.getId() != null ? rate.getId().toString() : "new";
+        return String.format("{id:%s,origin:%s,dest:%s,cat:%s,from:%s,to:%s}",
+                idPart,
+                rate.getOrigin().getCode(),
+                rate.getDestination().getCode(),
+                rate.getProductCategory().getCode(),
+                rate.getEffectiveFrom(),
+                rate.getEffectiveTo());
+    }
+
+    private TariffRateDto mapToDto(TariffRate rate) {
+        TariffRateDto dto = new TariffRateDto();
+        dto.id = rate.getId();
+        dto.originCountryCode = rate.getOrigin().getCode();
+        dto.destinationCountryCode = rate.getDestination().getCode();
+        dto.productCategoryCode = rate.getProductCategory().getCode();
+        dto.baseRate = rate.getBaseRate();
+        dto.additionalFee = rate.getAdditionalFee();
+        dto.effectiveFrom = rate.getEffectiveFrom();
+        dto.effectiveTo = rate.getEffectiveTo();
+        return dto;
     }
 }
-
